--- a/ZD.html
+++ b/ZD.html
@@ -77,8 +77,8 @@
 			 <br/>
 			 <br/>
 			 <br/>
-		  <p align="left"> <font color="black" size="5" face="Times New Roman"> <b> Poniżej za trzy wyliczenia z różnymu znakami wyliczenia </b></p> <br>
-		  <p align="left"> <font color="black" size="5" face="Times New Roman"> <b> Tu zaproponuj swoje związanę z informatyką </b> </p> <br>
+		  <p align="left"> <font color="black" size="10" face="Arial">  Poniżej za trzy wyliczenia z różnymu znakami wyliczenia </p> <br>
+		  <p align="left"> <font color="black" size="10" face="Arial"> Tu zaproponuj swoje związanę z informatyką </p> <br>
 			 
 		
 		</body>
