--- a/ZD.html
+++ b/ZD.html
@@ -79,7 +79,7 @@
 			 <br/>
 		  <p align="left"> <font color="black" size="10" face="Arial">  Poniżej za trzy wyliczenia z różnymu znakami wyliczenia </p> <br>
 		  <p align="left"> <font color="black" size="10" face="Arial"> Tu zaproponuj swoje związanę z informatyką </p> <br>
-		  <p align="center"> 	  
+		  <p align="center"> <A HREF="// 	  
 			 
 		
 		</body>
