--- a/plik_Neprozvannyi.html
+++ b/plik_Neprozvannyi.html
@@ -7,7 +7,7 @@
               </head>
              <body>
               <A href ="https://github.com/Neprozvannyi/ZD1/blob/main/Reaper_portrait.zip?raw=true">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</A><br>
-              <A href ="../ZD1.html">wróć</A><br>
+              <A href ="../ZD.html">wróć</A><br>
             </body>
           </html>
     
