--- a/ZD.html
+++ b/ZD.html
@@ -154,7 +154,7 @@
               <a name="koniec"></a>
               <A HREF="mailto:damager360@gmail.com">poczta_Neprozvannyi</A>
  <br>
- <A HREF="https://github.com/Neprozvannyi/plik_Neprozvannyi.html">plik_Neprozvannyi</A>
+ <A HREF="https://github.com/Neprozvannyi/plik_Neprozvannyi">plik_Neprozvannyi.html</A>
  <br>
  <A HREF="#poczatek">poczatek</A>
  <br>
