--- a/ZD.html
+++ b/ZD.html
@@ -160,9 +160,9 @@
  <br>
  <A HREF="#srodek">srodek</A>
  <br>
- <A HREF="./links/tabela_Neprozvannyi.html">tabela_Neprozvannyi</A>
+ <A HREF="https://github.com/Rinox360/Dima/blob/main/tabela1_neprozvannyi.html</A>
  <br>
- <A HREF="./links/formularz_Neprozvannyi.html">formularz_Neprozvannyi</A>                            
+ <A HREF="https://github.com/Rinox360/Dima/blob/main/formularz_Neprozvannyi.html">formularz_Neprozvannyi</A>                            
 		
 		</body>
 </html>
