--- a/ZD.html
+++ b/ZD.html
@@ -162,7 +162,8 @@
  <br>
  <A HREF="https://github.com/Rinox360/Dima/blob/main/tabela1_neprozvannyi.html</A>
  <br>
- <A HREF="https://github.com/Rinox360/Dima/blob/main/formularz_Neprozvannyi.html">formularz_Neprozvannyi</A>                            
+ <A HREF="https://github.com/Rinox360/Dima/blob/main/formularz_Neprozvannyi.html">formularz_Neprozvannyi</A> 
+ <b>Walidacja strony internetowej</b> to ściśle określone działania, mające na celu sprawdzenie czy budowa strony zawiera błędy.            <br/>             <a href="https://validator.w3.org/%22%3Elink do strony</a>             <a href="walidacja.html"> zrzuty ekranu</a>                          <br/>             <br/>             <br/>             <br/>										 
 		
 		</body>
 </html>
