--- a/ZD.html
+++ b/ZD.html
@@ -166,7 +166,7 @@
  <br>				      
 				      
 <b>Walidacja strony internetowej</b> to ściśle określone działania, mające na celu sprawdzenie czy budowa strony zawiera błędy.             <br/>             
-	<a href="https://validator.w3.org/%22%3Elink do strony</a>             
+	<a href="https://validator.w3.org/%22%3E>link do strony</a>             
 	<a href="walidacja.html"> zrzuty ekranu</a>                          
 				 <br/>            
 				 <br/>            
