--- a/walidacja.html
+++ b/walidacja.html
@@ -5,7 +5,7 @@
     </head>
     <body>
     <a href="index.html">wróć</a><br/><br/><br/>
-    <img src="Neprozvanny"/><br/><br/>
-    <img src="Neprozvanny1 "/> <br/><br/>
+    <img src="Neprozvanny.png"/><br/><br/>
+    <img src="Neprozvanny1.png"/> <br/><br/>
     </body>
 </html>
