--- a/walidacja.html
+++ b/walidacja.html
@@ -4,7 +4,7 @@
     <title>walidacja</title>
     </head>
     <body>
-    <a href="index.html">wróć</a><br/><br/><br/>
+    <a href="ZD.html">wróć</a><br/><br/><br/>
     <img src="Neprozvanny.png"/><br/><br/>
     <img src="Neprozvanny1.png"/> <br/><br/>
     </body>
