--- a/formularz_Neprozvannyi.html
+++ b/formularz_Neprozvannyi.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-    <html lang="pl-PL">
-         <html>
-            <head>
-             <meta charset="utf-8">
-              <title>formularz-Neprozvannyi</title>
-              </head>
-             <body>
-              Neprozvannyi Dmytro tutaj będzie formularz <br>
-             <A href ="../index.html">wstecz</A> <br>
-            </body>
-          </html>
+!DOCTYPE html>
+<html lang="pl-PL">
+    <head>
+        <meta charset="utf-8">
+        <title>formularz</title>
+        </head>
+    <body>
+    <a href="ZD.html">wróć</a><br/><br/>
+
+
+    </body>
+</html>
     
