--- a/walidacja.html
+++ b/walidacja.html
@@ -5,7 +5,7 @@
     </head>
     <body>
     <a href="ZD.html">wróć</a><br/><br/><br/>
-    <img src="Neprozvanny .png"/><br/><br/>
-    <img src="Neprozvanny1.png"/> <br/><br/>
+    <img src="Neprozvanny .jpg"/><br/><br/>
+    <img src="Neprozvanny1.jpg"/> <br/><br/>
     </body>
 </html>
