--- a/walidacja.html
+++ b/walidacja.html
@@ -6,6 +6,6 @@
     <body>
     <a href="ZD.html">wróć</a><br/><br/><br/>
     <img src="Neprozvanny1.jpg"/><br/><br/>
-    <img src="Neprozvanny1.jpg"/> <br/><br/>
+    <img src="Neprzvanny .jpg"/> <br/><br/>
     </body>
 </html>
