--- a/ZD.html
+++ b/ZD.html
@@ -10,7 +10,7 @@
 
                     <A HREF="mailto:damager360@gmail.com">poczta_Neprozvannyi</A>
                     <br>
-                    <A HREF="./links/plik_Neprozvannyi.html">plik_Neprozvannyi</A>
+                    <a href="Neprozvanny"> zrzuty ekranu</a>
                 
                     <br>
                     <A HREF="#srodek">srodek</A>
