--- a/ZD.html
+++ b/ZD.html
@@ -10,16 +10,16 @@
 
                     <A HREF="mailto:damager360@gmail.com">poczta_Neprozvannyi</A>
                     <br>
-                    <a href="Neprozvanny"> zrzuty ekranu</a>
+                    <a href="plik_Neprozvannyi.html"> zrzuty ekranu</a>
                 
                     <br>
                     <A HREF="#srodek">srodek</A>
                     <br>
                     <A HREF="#koniec">koniec</A>
                     <br>
-                    <A HREF="./links/tabela2_Neprozvanny.html">tabela_Neprozvannyi</A>
+                    <A HREF="tabela2_Neprozvanny.html">tabela_Neprozvannyi</A>
                     <br>
-                    <A HREF="./links/formularz_Neprozvannyi.html">formularz_Neprozvannyi</A>
+                    <A HREF="formularz_Neprozvannyi.html">formularz_Neprozvannyi</A>
                     
           <p align="right"> <font color="red" size="7" face="Arial"> Dmytro </font> </p> <br>
           <p align="right"> <font color="red" size="6" face="Arial"> Dmytro </font> </p> <br>        
