--- a/ZD.html
+++ b/ZD.html
@@ -10,7 +10,7 @@
 
                     <A HREF="mailto:damager360@gmail.com">poczta_Neprozvannyi</A>
                     <br>
-                    <a href="plik_Neprozvannyi.html"> zrzuty ekranu</a>
+                    <a href="plik_Neprozvannyi.html"> plik </a>
                 
                     <br>
                     <A HREF="#srodek">srodek</A>
